# scan-quest

./: .pre-commit-config.yaml  README.md  compose.yml  pyproject.toml
backend/: .flake8  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/common/: cryptography_ext.py  sqlalchemy_ext.py
backend/app/models/: findings_db.py  goals_db.py  participants_db.py  quests_db.py
backend/app/routers/: findings_api.py  goals_api.py  participants_api.py  participation_pub.py  quests_api.py
backend/app/routers/dependencies/: authorization.py  goals_dep.py  participants_dep.py  quests_dep.py
backend/tests/: conftest.py  factories.py  test_findings.py  test_participants.py  test_participation.py  test_quest_goals.py  test_quests.py
backend/tests/common/: active_session.py  assert_contains_ext.py  types.py  utils.py
frontend/: .gitignore  components.json  gatsby-config.ts  gatsby-node.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/api/: fetcher.tsx  types.tsx
frontend/src/components/ui/: loader.tsx
frontend/src/layouts/admin/qr-generator/: index.tsx
frontend/src/layouts/public/code/: index.tsx  invalid-code.tsx  loading.tsx  signup.tsx  success.tsx
frontend/src/layouts/public/findings/: index.tsx
frontend/src/pages/: 404.tsx  code.tsx  findings.tsx  index.tsx
frontend/src/pages/admin/: index.tsx
frontend/src/styles/: global.css
