[tool.poetry]
name = "scan-quest"
version = "0.1.0"
description = "Backend for the ScanQuest web application for organizing quests based on scanning QR-codes"
authors = ["niqzart <niqzart@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
psycopg = {extras = ["binary"], version = "^3.2.3"}
pydantic-marshals = {version = "0.3.14", extras = ["sqlalchemy"]}
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
flake8 = "6.1.0"
black = "24.4.2"
isort = "^5.13.2"
pre-commit = "^3.2.1"
mypy = "^1.11.2"
flake8-pie = "0.16.0"
dlint = "0.14.0"
flake8-coding = "1.3.2"
flake8-secure-coding-standard = "1.4.1"
flake8-unused-arguments = "0.0.13"
flake8-pytest-style = "1.7.2"
flake8-useless-assert = "0.4.4"
flake8-simplify = "0.19.3"
flake8-future-import = "0.4.7"
flake8-functions-names = "0.4.0"
flake8-variables-names = "0.0.5"
flake8-comments = "0.1.2"
flake8-annotations = "2.9.1"
flake8-new-union-types = "0.4.1"
flake8-pep585 = "0.1.7"
flake8-type-checking = "2.3.1"
flake8-print = "5.0.0"
flake8-use-fstring = "1.4"
flake8-use-pathlib = "0.3.0"
flake8-test-name = "^0.1.5"
wemake-python-styleguide = "0.18.0"
pydantic-marshals = {extras = ["assert-contains"], version = "^0.3.14"}
faker = "^30.3.0"
polyfactory = "^2.17.0"
pytest-cov = "^5.0.0"
freezegun = "^1.5.1"

[tool.isort]
profile = "black"
py_version = 312  # TODO make this 313
combine_as_imports = true
known_first_party = ["app", "tests"]
no_lines_before = "LOCALFOLDER"
reverse_relative = true
line_length = 88

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
